# backtester.finflo

backtester optimization/: .env  Cargo.toml  SMAStrategy.html  audit.ipynb  example.py
backtester optimization/src/: api.rs  backtester.rs  lib.rs  main.rs
