[package]
name = "backtester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.39"
chrono = { version = "0.4", features = ["serde"] }
yata = "0.7.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
regex = "1.8.1"
actix-web = "4.0"
log = "0.4"
env_logger = "0.9"
simplelog = "0.10"
rayon = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[lib]
name = "backtester"
crate-type = ["cdylib"]